--- a/app/src/main/res/layout/fragment_choose_words_item.xml
+++ b/app/src/main/res/layout/fragment_choose_words_item.xml
@@ -4,13 +4,13 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/choose_words_item">
+        android:id="@+id/choose_words_item"
+        android:layout_margin="@dimen/item_margin">
 
     <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="8dp"
             android:background="@drawable/item_background">
 
         <TextView
