--- a/app/src/main/res/layout/fragment_dictionary.xml
+++ b/app/src/main/res/layout/fragment_dictionary.xml
@@ -10,13 +10,13 @@
     <androidx.constraintlayout.widget.ConstraintLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="0dp"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="@dimen/content_margin"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/content_margin"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"
+            android:layout_marginEnd="@dimen/content_margin"
             android:id="@+id/linearLayout">
 
         <ImageButton
@@ -48,14 +48,14 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             android:layout_marginBottom="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-            android:layout_marginTop="8dp">
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
         <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/dictionaryList"
-                tools:listitem="@layout/fragment_dictionary_item"/>
+                tools:listitem="@layout/fragment_dictionary_item"
+                android:layout_marginHorizontal="@dimen/content_margin"/>
 
     </ScrollView>
 
