--- a/app/src/main/res/layout/fragment_study_list_edit.xml
+++ b/app/src/main/res/layout/fragment_study_list_edit.xml
@@ -10,16 +10,13 @@
 
     <LinearLayout
             android:orientation="vertical"
-            android:layout_width="409dp"
-            android:layout_height="729dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8dp">
+            >
 
         <EditText
                 android:layout_width="match_parent"
@@ -28,12 +25,15 @@
                 android:ems="10"
                 android:id="@+id/name"
                 android:hint="@string/name_hint"
-                android:importantForAutofill="no"/>
+                android:importantForAutofill="no"
+                android:layout_marginHorizontal="@dimen/content_margin"
+                android:layout_marginTop="@dimen/content_margin"/>
 
         <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/content_margin">
 
             <TextView
                     android:text="@string/words_count"
@@ -58,17 +58,16 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginStart="8dp"
                 app:layout_constraintHorizontal_bias="1.0"
-                android:layout_marginBottom="8dp"
                 app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="8dp">
+                >
 
             <androidx.recyclerview.widget.RecyclerView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/words"
-                    tools:listitem="@layout/fragment_study_list_item"/>
+                    tools:listitem="@layout/fragment_study_list_item"
+                    android:layout_marginHorizontal="@dimen/content_margin"/>
 
         </ScrollView>
     </LinearLayout>
