--- a/app/src/main/res/layout/fragment_study_list_item.xml
+++ b/app/src/main/res/layout/fragment_study_list_item.xml
@@ -3,12 +3,14 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/word_list_item">
+        android:id="@+id/word_list_item"
+        android:layout_margin="@dimen/item_margin">
 
     <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            >
 
         <TextView
                 android:text="@string/word"
