--- a/app/src/main/res/layout/fragment_study_lists_item.xml
+++ b/app/src/main/res/layout/fragment_study_lists_item.xml
@@ -4,25 +4,23 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/word_lists_item">
+        android:id="@+id/word_lists_item"
+        android:layout_margin="@dimen/item_margin">
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
         <TextView
-                android:text="@string/text_placeholder"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/name"
                 android:textAlignment="viewStart"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="8dp"
-                android:layout_marginStart="8dp"
                 android:textSize="24sp"
                 app:layout_constraintEnd_toStartOf="@+id/editList"
-                android:layout_marginEnd="171dp"/>
+                android:text="@string/text_placeholder"/>
 
         <TextView
                 android:text="@string/words_count"
@@ -31,19 +29,17 @@
                 android:id="@+id/count"
                 app:layout_constraintTop_toBottomOf="@+id/name"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"/>
+                />
 
         <ImageButton
                 android:src="@android:drawable/ic_menu_edit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:id="@+id/editList"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 android:contentDescription="@string/edit"
-                android:layout_marginEnd="8dp"
-                />
+                android:scaleType="center"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
