--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,5 +4,9 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
+
     <dimen name="fab_margin">16dp</dimen>
+
+    <dimen name="content_margin">8dp</dimen>
+    <dimen name="item_margin">1dp</dimen>
 </resources>
