--- a/app/src/main/res/layout/fragment_study_lists.xml
+++ b/app/src/main/res/layout/fragment_study_lists.xml
@@ -34,7 +34,7 @@
             android:layout_gravity="bottom|end"
             android:layout_marginEnd="@dimen/fab_margin"
             android:layout_marginBottom="@dimen/fab_margin"
-            app:srcCompat="@android:drawable/ic_menu_save"
+            app:srcCompat="@drawable/ic_baseline_add"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
 
