--- a/app/src/main/res/layout/fragment_study_list_edit.xml
+++ b/app/src/main/res/layout/fragment_study_list_edit.xml
@@ -81,4 +81,15 @@
             app:srcCompat="@drawable/ic_baseline_check"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/delete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="@dimen/fab_margin"
+            app:srcCompat="@drawable/ic_baseline_delete"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:visibility="invisible" app:backgroundTint="@color/delete"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
