--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,7 @@
 
     <dimen name="content_margin">8dp</dimen>
     <dimen name="item_margin">1dp</dimen>
+    <dimen name="item_padding">4dp</dimen>
+
+    <dimen name="word_translation_text_size">18sp</dimen>
 </resources>
