--- a/app/src/main/res/layout/fragment_dictionary.xml
+++ b/app/src/main/res/layout/fragment_dictionary.xml
@@ -17,7 +17,7 @@
             android:layout_marginTop="@dimen/content_margin"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="@dimen/content_margin"
-            android:id="@+id/linearLayout">
+            android:id="@+id/searchLayout">
 
         <ImageButton
                 android:src="@android:drawable/ic_menu_sort_by_size"
@@ -48,7 +48,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             android:layout_marginBottom="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+            app:layout_constraintTop_toBottomOf="@+id/searchLayout"
             android:layout_marginTop="8dp">
 
         <androidx.recyclerview.widget.RecyclerView
