[21] support of search with already included filter; checkbox action added

--- a/app/src/main/res/layout/fragment_choose_words.xml
+++ b/app/src/main/res/layout/fragment_choose_words.xml
@@ -52,7 +52,7 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@+id/searchInputLayout"
                 app:layout_constraintStart_toStartOf="parent"
-                android:id="@+id/checkBox"/>
+                android:id="@+id/showAlreadyIncluded"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
