--- a/app/src/main/res/layout/fragment_choose_words_item.xml
+++ b/app/src/main/res/layout/fragment_choose_words_item.xml
@@ -13,7 +13,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/item_background"
             android:paddingHorizontal="@dimen/item_padding"
-            android:id="@+id/linearLayout">
+            android:id="@+id/chooseWordItemLayout">
 
         <TextView
                 android:text="@string/word"
