--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -45,7 +45,7 @@
             android:label="@string/word_list"
             tools:layout="@layout/fragment_study_list_edit">
         <argument
-                android:name="wordListId"
+                android:name="studyListId"
                 app:argType="ru.egoncharovsky.words.ui.NavArgLong"
                 app:nullable="true"
                 android:defaultValue="@null"/>
@@ -58,6 +58,11 @@
             android:name="ru.egoncharovsky.words.ui.wordlist.ChooseWordsFragment"
             android:label="@string/choose_words"
             tools:layout="@layout/fragment_dictionary">
+        <argument
+                android:name="studyListId"
+                app:argType="ru.egoncharovsky.words.ui.NavArgLong"
+                app:nullable="true"
+                android:defaultValue="@null"/>
         <argument
                 android:name="chosen"
                 app:argType="long[]"
