--- a/app/src/main/res/layout/fragment_dictionary_item.xml
+++ b/app/src/main/res/layout/fragment_dictionary_item.xml
@@ -1,31 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/dictionary_list_item"
         android:layout_margin="@dimen/item_margin">
 
-    <LinearLayout
-            android:orientation="horizontal"
+    <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingHorizontal="@dimen/item_padding">
 
         <TextView
                 android:text="@string/word"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/wordValue"
-                android:layout_weight="1"
-                android:textSize="@dimen/word_translation_text_size"/>
+                android:textSize="@dimen/word_translation_text_size"
+                android:layout_margin="@dimen/item_margin"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/wordTranslation"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/wordPopularity"/>
 
         <TextView
                 android:text="@string/translation"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/wordTranslation"
-                android:layout_weight="1"
-                android:textSize="@dimen/word_translation_text_size"/>
-    </LinearLayout>
+                android:textSize="@dimen/word_translation_text_size"
+                android:layout_margin="@dimen/item_margin"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/wordValue"
+                app:layout_constraintEnd_toEndOf="parent" />
+
+        <TextView
+                android:text="@string/popularity"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/wordPopularity"
+                android:textSize="@dimen/subscript_text_size"
+                android:visibility="visible"
+                android:layout_margin="@dimen/item_margin"
+                app:layout_constraintTop_toBottomOf="@+id/wordValue"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
