--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,6 @@
     <dimen name="item_padding">4dp</dimen>
 
     <dimen name="word_translation_text_size">18sp</dimen>
+
+    <dimen name="subscript_text_size">12sp</dimen>
 </resources>
